fix example and setup default settings

--- a/settings.js.sample
+++ b/settings.js.sample
@@ -1,12 +1,12 @@
 var firebaseConfig = {
-  apiKey: "AIzaSyDfjP5Mne6iAsR6pWNCd4-DdpanrBMDRk8",
-  authDomain: "buddy-tomato.firebaseapp.com",
-  databaseURL: "https://buddy-tomato.firebaseio.com",
-  projectId: "buddy-tomato",
-  storageBucket: "buddy-tomato.appspot.com",
-  messagingSenderId: "530853447243",
-  appId: "1:530853447243:web:393cad25c74cb66ae32fce",
-  measurementId: "G-JFQE7SPPB0"
+  apiKey: "",
+  authDomain: "",
+  databaseURL: "",
+  projectId: "",
+  storageBucket: "",
+  messagingSenderId: "",
+  appId: "",
+  measurementId: ""
 };
 
 module.exports = {
